Added fosuserbundle, security, routes, User entity and its fixtures, custom login page, new favicon and a new Controller.

--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
+{% block title %}Principal{% endblock %}
+
 {% block body %}
     HOLA!
 {% endblock %}
