--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>{% block title %}{% endblock %}</title>
+    <title>Archmage - {% block title %}{% endblock %}</title>
     {# block css #}
     {% block stylesheets %}
         {# con los css no funciona el @Bundle shortcut #}
@@ -15,7 +15,7 @@
         '@ArchmageGameBundle/Resources/public/css/style.css'
         %}
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,400,700">
+        <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css'>
         {% endstylesheets %}
     {% endblock %}
     {# favicon #}
