--- a/src/Archmage/GameBundle/Resources/views/topbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/topbar.html.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-home"></i> Principal</a>
+            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-home"></i> Archmage</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
