--- a/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
@@ -5,42 +5,63 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="page-header text-center">
-                            <h1>Reino <i class="fa fa-fw fa-lg fa-wifi"></i> <small>Resumen de tus dominios</small></h1>
-                        </div>
-                    </div>
+            <div class="col-xs-12">
+                <div class="page-header text-center">
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-eye"></i> <small>Resumen</small></h1>
                 </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading text-center">Tierras</div>
-                            <div class="panel-body text-center">
-
-                            </div>
-                            <div class="panel-footer text-center">user.lands</div>
-                        </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center">Territorios</div>
+                    <div class="panel-body text-center">
+                        <span>750/1000</span>
                     </div>
-                    <div class="col-md-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading text-center">Tierras</div>
-                            <div class="panel-body text-center">
-
-                            </div>
-                            <div class="panel-footer text-center">user.lands</div>
-                        </div>
+                    <div class="panel-footer text-center"><a href="#">Explorar</a> | <a href="#">Construir</a></div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading text-center">Maná</div>
+                    <div class="panel-body text-center">
+                        <span>4200/10000</span>
                     </div>
-                    <div class="col-md-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading text-center">Tierras</div>
-                            <div class="panel-body text-center">
-
-                            </div>
-                            <div class="panel-footer text-center">user.lands</div>
-                        </div>
+                    <div class="panel-footer text-center"><a href="#">Recargar</a> | <a href="#">Usar</a></div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center">Dinero</div>
+                    <div class="panel-body text-center">
+                        <span>150000000</span>
                     </div>
+                    <div class="panel-footer text-center"><a href="#">Recaudar</a></div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="panel panel-danger">
+                    <div class="panel-heading text-center">Tropas</div>
+                    <div class="panel-body text-center">
+                        <span>250/2000</span>
+                    </div>
+                    <div class="panel-footer text-center"><a href="#">Contratar</a> | <a href="#">Atacar</a></div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Objetos</div>
+                    <div class="panel-body text-center">
+                        <span>250/2000</span>
+                    </div>
+                    <div class="panel-footer text-center"><a href="#">Subasta</a></div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center">Mensajes</div>
+                    <div class="panel-body text-center">
+                        <span>4</span>
+                    </div>
+                    <div class="panel-footer text-center"><a href="#">Leer</a> | <a href="#">Enviar</a></div>
                 </div>
             </div>
         </div>
