--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -2,6 +2,16 @@
 
 {% block title %}Principal{% endblock %}
 
+{% block nav %}{% endblock %}
+
 {% block body %}
-    HOLA!
+    <div class="container">
+        <div class="col-xs-12">
+            <div class="jumbotron text-center" style="margin-top:25%;">
+                <h1>ArchMage</h1>
+                <p>El juego de lucha de magos donde solo puede quedar uno.</p>
+                <p><a class="btn btn-primary btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button">Acceder</a></p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
