--- a/src/Archmage/GameBundle/Resources/views/topbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/topbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-static-top navbar-inverse">
-    <div class="container-fluid">
+    <div class="container"><!--container-fluid-->
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -8,11 +8,28 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-home"></i> Archmage</a>
+            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-home"></i> Principal</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Militar<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                    </ul>
+                </li>
+            </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
