--- a/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
@@ -7,61 +7,82 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-eye"></i> <small>Resumen</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-line-chart"></i> <small>Resumen</small></h1>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-sm-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center">Territorios</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Territorios</div>
                     <div class="panel-body text-center">
                         <span>750/1000</span>
                     </div>
-                    <div class="panel-footer text-center"><a href="#">Explorar</a> | <a href="#">Construir</a></div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-search"></i> Explorar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-wrench"></i> Construir</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-bomb"></i> Derribar</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="panel panel-info">
-                    <div class="panel-heading text-center">Maná</div>
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i> Magia</div>
                     <div class="panel-body text-center">
                         <span>4200/10000</span>
                     </div>
-                    <div class="panel-footer text-center"><a href="#">Recargar</a> | <a href="#">Usar</a></div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-tint"></i> Maná</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-magic"></i> Conjurar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-graduation-cap"></i> Investigar</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="panel panel-warning">
-                    <div class="panel-heading text-center">Dinero</div>
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i> Dinero</div>
                     <div class="panel-body text-center">
                         <span>150000000</span>
                     </div>
-                    <div class="panel-footer text-center"><a href="#">Recaudar</a></div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-money"></i> Recaudar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-beer"></i> Taberna</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="panel panel-danger">
-                    <div class="panel-heading text-center">Tropas</div>
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag"></i> Tropas</div>
                     <div class="panel-body text-center">
                         <span>250/2000</span>
                     </div>
-                    <div class="panel-footer text-center"><a href="#">Contratar</a> | <a href="#">Atacar</a></div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">Objetos</div>
-                    <div class="panel-body text-center">
-                        <span>250/2000</span>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-check"></i> Contratar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-ban"></i> Desbandar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-crosshairs"></i> Atacar</a>
                     </div>
-                    <div class="panel-footer text-center"><a href="#">Subasta</a></div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center">Mensajes</div>
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cubes"></i> Objetos</div>
+                    <div class="panel-body text-center">
+                        <span>25</span>
+                    </div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-shopping-cart"></i> Comprar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-cogs"></i> Usar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <div class="panel panel-success">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-envelope"></i> Mensajes</div>
                     <div class="panel-body text-center">
                         <span>4</span>
                     </div>
-                    <div class="panel-footer text-center"><a href="#">Leer</a> | <a href="#">Enviar</a></div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-list"></i> Leer</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-send"></i> Enviar</a>
+                    </div>
                 </div>
             </div>
         </div>
