--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -7,10 +7,14 @@
 {% block body %}
     <div class="container">
         <div class="col-xs-12">
-            <div class="jumbotron text-center" style="margin-top:25%;">
-                <h1>ArchMage</h1>
-                <p>El juego de lucha de magos donde solo puede quedar uno.</p>
-                <p><a class="btn btn-primary btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button">Acceder</a></p>
+            <div class="jumbotron text-center" style="margin-top:10%;">
+                <h1>Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</h1>
+                <p>La guerra ha llegado a Arcadia</p>
+                <br>
+                <div class="btn-group" role="group" aria-label="Acción">
+                    <a class="btn btn-primary btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button"><i class="fa fa-fw fa-lg fa-sign-in"></i> Acceder</a>
+                    <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fw fa-lg fa-pencil-square-o"></i> Registrarse</a>
+                </div>
             </div>
         </div>
     </div>
