--- a/src/Archmage/GameBundle/Resources/views/topbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/topbar.html.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-home"></i> Principal</a>
+            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}">Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -16,17 +16,43 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_index') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-search"></i> Explorar</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-wrench"></i> Construir</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-bomb"></i> Derribar</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-tint"></i> Maná</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-magic"></i> Conjurar</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-graduation-cap"></i> Investigar</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Militar<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-check"></i> Contratar</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-ban"></i> Desbandar</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-crosshairs"></i> Atacar</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-user"></i> Nombre<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-sign-out"></i> Salir</a></li>
                     </ul>
                 </li>
             </ul>
