--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,8 +33,8 @@
             {% for flashMessage in flashMessages %}
                 <div class="row">
                     <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center">
-                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><i class="fa fa-times-circle"></i></button>
-                        <strong>{{ type|capitalize }}!</strong> {{ flashMessage }}
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><i class="fa fa-fw fa-lg fa-check-circle"></i></button>
+                        {{ flashMessage }}
                     </div>
                 </div>
             {% endfor %}
