--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Principal{% endblock %}
+{% block title %}Bienvenid@{% endblock %}
 
 {% block nav %}{% endblock %}
 
@@ -9,12 +9,11 @@
         <div class="col-xs-12">
             <div class="jumbotron text-center" style="margin-top:10%;">
                 <h1>Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</h1>
+                <hr>
                 <p>La guerra ha llegado a Arcadia</p>
-                <br>
-                <div class="btn-group" role="group" aria-label="Acción">
-                    <a class="btn btn-primary btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button"><i class="fa fa-fw fa-lg fa-sign-in"></i> Acceder</a>
-                    <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fw fa-lg fa-pencil-square-o"></i> Registrarse</a>
-                </div>
+                <hr>
+                <a class="btn btn-success btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button"><i class="fa fa-fw fa-lg fa-sign-in"></i> Acceder</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fw fa-lg fa-pencil-square-o"></i> Registrar</a>
             </div>
         </div>
     </div>
