--- a/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
@@ -7,14 +7,23 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-line-chart"></i> <small>Resumen</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-money"></i> <small>Resumen</small></h1>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Territorios</div>
-                    <div class="panel-body text-center">
-                        <span>750/1000</span>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
                         <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-search"></i> Explorar</a>
@@ -23,11 +32,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i> Magia</div>
-                    <div class="panel-body text-center">
-                        <span>4200/10000</span>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
                         <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-tint"></i> Maná</a>
@@ -36,11 +54,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i> Dinero</div>
-                    <div class="panel-body text-center">
-                        <span>150000000</span>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
                         <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-money"></i> Recaudar</a>
@@ -48,11 +75,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag"></i> Tropas</div>
-                    <div class="panel-body text-center">
-                        <span>250/2000</span>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag-checkered"></i> Ejército</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
                         <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-check"></i> Contratar</a>
@@ -61,11 +97,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cubes"></i> Objetos</div>
-                    <div class="panel-body text-center">
-                        <span>25</span>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
                         <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-shopping-cart"></i> Comprar</a>
@@ -73,11 +118,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-envelope"></i> Mensajes</div>
-                    <div class="panel-body text-center">
-                        <span>4</span>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
                         <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-list"></i> Leer</a>
