--- a/src/Archmage/GameBundle/Resources/views/topbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/topbar.html.twig
@@ -8,21 +8,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}">Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</a>
+            <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-eye"></i> ArchMage</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-money"></i> Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="{{ path('archmage_game_kingdom_index') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-money"></i> Recaudar</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_territory_index') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-search"></i> Explorar</a></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-wrench"></i> Construir</a></li>
@@ -30,19 +32,20 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-magic"></i> Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_magic_index') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-tint"></i> Maná</a></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-magic"></i> Conjurar</a></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-graduation-cap"></i> Investigar</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-cubes"></i> Objetos</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-home"></i> Militar<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-flag-checkered"></i> Ejército<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_army_index') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-check"></i> Contratar</a></li>
                         <li><a href="#"><i class="fa fa-fw fa-lg fa-ban"></i> Desbandar</a></li>
@@ -52,7 +55,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-user"></i> Nombre<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><i class="fa fa-fw fa-lg fa-sign-out"></i> Salir</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-envelope"></i> Mensajes</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-sign-out"></i> Cerrar sesión</a></li>
                     </ul>
                 </li>
             </ul>
