--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -6,15 +6,14 @@
 
 {% block body %}
     <div class="container">
-        <div class="col-xs-12">
-            <div class="jumbotron text-center" style="margin-top:10%;">
-                <h1>Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</h1>
-                <hr>
-                <p>La guerra ha llegado a Arcadia</p>
-                <hr>
-                <a class="btn btn-success btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button"><i class="fa fa-fw fa-lg fa-sign-in"></i> Acceder</a>
-                <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fw fa-lg fa-pencil-square-o"></i> Registrar</a>
-            </div>
+        <br><br>
+        <div class="jumbotron text-center">
+            <h1>Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</h1>
+            <hr>
+            <p>La guerra ha llegado a Arcadia</p>
+            <br>
+            <a class="btn btn-success btn-lg" href="{{ path('archmage_game_kingdom_index') }}" role="button"><i class="fa fa-fw fa-lg fa-sign-in"></i> Acceder</a>
+            <a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fw fa-lg fa-pencil-square-o"></i> Registrar</a>
         </div>
     </div>
 {% endblock %}
