--- a/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/index.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-money"></i> <small>Resumen</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-money"></i><small> Resumen</small></h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -20,15 +20,16 @@
                             </div>
                             <div class="col-xs-8">
                                 <ul class="list-group">
-                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                    <li class="list-group-item"><strong>Total:</strong> X</li>
+                                    <li class="list-group-item"><strong>Total:</strong> X</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-search"></i> Explorar</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-wrench"></i> Construir</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-bomb"></i> Derribar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs"> Explorar</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs"> Construir</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-bomb"></i><span class="hidden-xs"> Derribar</span></a>
                     </div>
                 </div>
             </div>
@@ -48,9 +49,9 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-tint"></i> Maná</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-magic"></i> Conjurar</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-graduation-cap"></i> Investigar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-tint"></i><span class="hidden-xs"> Maná</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs"> Conjurar</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-graduation-cap"></i><span class="hidden-xs"> Investigar</span></a>
                     </div>
                 </div>
             </div>
@@ -70,8 +71,8 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-money"></i> Recaudar</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-beer"></i> Taberna</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-beer"></i><span class="hidden-xs"> Taberna</span></a>
                     </div>
                 </div>
             </div>
@@ -91,9 +92,9 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-check"></i> Contratar</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-ban"></i> Desbandar</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-crosshairs"></i> Atacar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-check"></i><span class="hidden-xs"> Contratar</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-ban"></i><span class="hidden-xs"> Desbandar</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-crosshairs"></i><span class="hidden-xs"> Atacar</span></a>
                     </div>
                 </div>
             </div>
@@ -113,8 +114,8 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-shopping-cart"></i> Comprar</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-cogs"></i> Usar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-shopping-cart"></i><span class="hidden-xs"> Comprar</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-cogs"></i><span class="hidden-xs"> Usar</span></a>
                     </div>
                 </div>
             </div>
@@ -134,8 +135,8 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-list"></i> Leer</a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-send"></i> Enviar</a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-list"></i><span class="hidden-xs"> Leer</span></a>
+                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs"> Enviar</span></a>
                     </div>
                 </div>
             </div>
