Added several twigs and its controller functions.

--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
     <div class="container">
         <div class="jumbotron" id="jumbotronError">
-            <h1 class="text-center">ERROR <i class="fa fa-fw fa-lg fa-wifi"></i> <small>Algo se ha roto!</small></h1>
+            <h1 class="text-center">ERROR <i class="fa fa-fw fa-lg fa-ban"></i> <small>Algo se ha roto!</small></h1>
             <hr>
-            <p class="lead">Ha intentado acceder a una URL que no existe o que estaba mal escrita. Por favor, compruébelo e inténtelo de nuevo. De persistir el error y estar seguro de que la URL proporcionada es correcta, por favor, póngase en contacto con el administrador del sistema. Disculpe las molestias.</p>
+            <p class="lead">Por tu torpeza se han desencadenado las siete maldiciones del inframundo. Espero que estés contento. Vamos a morir!</p>
         </div>
     </div>
 {% endblock %}
