--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,7 @@
 <body>
 <img src="{{ asset('bundles/archmagegame/images/background/theme.jpg') }}" class="background">
 {# block topbar menu #}
-{% block nav %}{% endblock %}
+{% block navbar %}{% endblock %}
 {# block flashbag messages #}
 {% block flashbag %}
     <div class="container">
