--- a/src/Archmage/GameBundle/Resources/views/Army/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/summary.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Magia{% endblock %}
+{% block title %}Ejército{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-tint"></i> <small>Resumen</small></h1>
+                    <h1>Ejército <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Resumen</small></h1>
                 </div>
             </div>
         </div>
