--- a/src/Archmage/GameBundle/Resources/views/Kingdom/hire.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/hire.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Mensajes{% endblock %}
+{% block title %}Contratar{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Mensajes <i class="fa fa-fw fa-lg fa-envelope"></i> <small>Palomas mensajeras</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Contratar</small></h1>
                 </div>
             </div>
         </div>
