--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-money"></i><small> Resumen</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-bar-chart"></i><small> Resumen</small></h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -15,33 +15,32 @@
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-xs-9">
                                 <ul class="list-group">
-                                    <li class="list-group-item"><strong>Total:</strong> X</li>
                                     <li class="list-group-item"><strong>Total:</strong> X</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs"> Explorar</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs"> Construir</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-bomb"></i><span class="hidden-xs"> Derribar</span></a>
+                        <a href="{{ path('archmage_game_territory_explore') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs"> Explorar</span></a>
+                        <a href="{{ path('archmage_game_territory_build') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs"> Construir</span></a>
+                        <a href="{{ path('archmage_game_territory_demolish') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-bomb"></i><span class="hidden-xs"> Derribar</span></a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-success">
+                <div class="panel panel-warning">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i> Magia</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-xs-9">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -49,21 +48,21 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-tint"></i><span class="hidden-xs"> Maná</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs"> Conjurar</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-graduation-cap"></i><span class="hidden-xs"> Investigar</span></a>
+                        <a href="{{ path('archmage_game_magic_charge') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-tint"></i><span class="hidden-xs"> Recargar</span></a>
+                        <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs"> Conjurar</span></a>
+                        <a href="{{ path('archmage_game_magic_research') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-graduation-cap"></i><span class="hidden-xs"> Investigar</span></a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-success">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i> Dinero</div>
+                <div class="panel panel-danger">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i> Oro</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
-                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            <div class="col-xs-3">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-xs-9">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -71,8 +70,8 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-beer"></i><span class="hidden-xs"> Taberna</span></a>
+                        <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
+                        <a href="{{ path('archmage_game_kingdom_hire') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-beer"></i><span class="hidden-xs"> Contratar</span></a>
                     </div>
                 </div>
             </div>
@@ -81,10 +80,10 @@
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag-checkered"></i> Ejército</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-xs-9">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -92,21 +91,21 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-check"></i><span class="hidden-xs"> Contratar</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-ban"></i><span class="hidden-xs"> Desbandar</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-crosshairs"></i><span class="hidden-xs"> Atacar</span></a>
+                        <a href="{{ path('archmage_game_army_recruit') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-check"></i><span class="hidden-xs"> Reclutar</span></a>
+                        <a href="{{ path('archmage_game_army_disband') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-ban"></i><span class="hidden-xs"> Desbandar</span></a>
+                        <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-crosshairs"></i><span class="hidden-xs"> Atacar</span></a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-success">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cubes"></i> Objetos</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cubes"></i> Artefactos</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
-                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            <div class="col-xs-3">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/artifact.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-xs-9">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -114,29 +113,29 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-shopping-cart"></i><span class="hidden-xs"> Comprar</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-cogs"></i><span class="hidden-xs"> Usar</span></a>
+                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-shopping-cart"></i><span class="hidden-xs"> Pujar</span></a>
+                        <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-cogs"></i><span class="hidden-xs"> Utilizar</span></a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-success">
+                <div class="panel panel-danger">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-envelope"></i> Mensajes</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
-                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            <div class="col-xs-3">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/letter.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-xs-9">
                                 <ul class="list-group">
-                                    <li class="list-group-item"><strong>Total:</strong> 1000</li>
+                                    <li class="list-group-item"><strong>Total:</strong> 3</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="Acción">
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-list"></i><span class="hidden-xs"> Leer</span></a>
-                        <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs"> Enviar</span></a>
+                        <a href="{{ path('archmage_game_mail_inbox') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-list"></i><span class="hidden-xs"> Leer</span></a>
+                        <a href="{{ path('archmage_game_mail_inbox') }}" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs"> Redactar</span></a>
                     </div>
                 </div>
             </div>
