--- a/src/Archmage/GameBundle/Resources/views/Territory/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/summary.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Ejército{% endblock %}
+{% block title %}Territorio{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Ejército <i class="fa fa-fw fa-lg fa-flag-checkered"></i> <small>Resumen</small></h1>
+                    <h1>Territorio <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Resumen</small></h1>
                 </div>
             </div>
         </div>
