--- a/src/Archmage/GameBundle/Resources/views/layout.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/layout.html.twig
@@ -1,8 +1,8 @@
 {% extends '::base.html.twig' %}
 
 {# navigation #}
-{% block nav %}
-{% include "ArchmageGameBundle::topbar.html.twig" %}
+{% block navbar %}
+{% include "ArchmageGameBundle::navbar.html.twig" %}
 {% endblock %}
 
 {# footer #}
