--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,11 +31,9 @@
     <div class="container">
         {% for type, flashMessages in app.session.flashbag.all() %}
             {% for flashMessage in flashMessages %}
-                <div class="row">
-                    <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center">
-                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><i class="fa fa-fw fa-lg fa-check-circle"></i></button>
-                        {{ flashMessage }}
-                    </div>
+                <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center fade in" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
+                    <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> {{ flashMessage }}
                 </div>
             {% endfor %}
         {% endfor %}
