--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -11,14 +11,14 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-success">
+                <div class="panel panel-{{ random(['danger','warning','success']) }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-4">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-8">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> X</li>
                                 </ul>
@@ -33,14 +33,14 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-warning">
+                <div class="panel panel-{{ random(['danger','warning','success']) }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i> Magia</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-4">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-8">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -55,14 +55,14 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-danger">
+                <div class="panel panel-{{ random(['danger','warning','success']) }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i> Oro</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-4">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-8">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -76,14 +76,14 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-success">
+                <div class="panel panel-{{ random(['danger','warning','success']) }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag-checkered"></i> Ejército</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-4">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-8">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -98,14 +98,14 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-success">
+                <div class="panel panel-{{ random(['danger','warning','success']) }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cubes"></i> Artefactos</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-4">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/artifact.jpg') }}">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-8">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 1000</li>
                                 </ul>
@@ -119,14 +119,14 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-danger">
+                <div class="panel panel-{{ random(['danger','warning','success']) }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-envelope"></i> Mensajes</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-3">
+                            <div class="col-xs-4">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/letter.jpg') }}">
                             </div>
-                            <div class="col-xs-9">
+                            <div class="col-xs-8">
                                 <ul class="list-group">
                                     <li class="list-group-item"><strong>Total:</strong> 3</li>
                                 </ul>
