--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -7,12 +7,14 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Investigar</small></h1>
+                    <h1>Magia <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Investigar hechizos</small></h1>
                 </div>
-                {% for i in 1..10 %}
+                {% set levels = ['danger','warning','success'] %}
+                {% for i in 1..random(10) %}
+                    {% set percent = random(100) %}
                     <div class="progress">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
-                            <span class="sr-only">60% Complete</span>
+                        <div class="progress-bar progress-bar-{{ levels[percent / 34] }}" role="progressbar" aria-valuenow="{{ percent }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{ percent }}%;">
+                            {{ percent }}%
                         </div>
                     </div>
                 {% endfor %}
