--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -7,11 +7,20 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Territorio <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Explorar</small></h1>
+                    <h1>Territorio <i class="fa fa-fw fa-lg fa-globe"></i> <small>Explorar</small></h1>
                 </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                        <span class="sr-only">60% Complete</span>
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Explorar</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
+                            </div>
+                            <div class="col-xs-8">
+                                <br>
+                                <p>Aquí puedes enviar exploradores para buscar más tierras sin dueño y añadirlas a tu reino. De esta forma incrementarás la cantidad de edificios que podrás construir. Recuerda que, cuantas más tierras poseas ya, menos encontrarás al explorar, hasta un máximo de 3500...</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
